2003-8-28  Brent Welch <welch@panasas.com>
        * lib/httpd.tcl: Fix in virtual host code suggested by Colin McCormack

2003-8-11  Brent Welch <welch@panasas.com>
        * tclhttpd.spec: Updates from Michael Thomas to create RPMs.
        * bin/httpdthread.tcl: fixed loading of mime.types in installed configuration
        * bin/httpd.tcl: added support for -gui flag to control default Tk gui
        * bin/tclhttpd.rc: added support for -gui flag to control default Tk gui
        * Everything else is cleanup associated with creating RPMs.

2003-6-26  Brent Welch <welch@panasas.com>
        * lib/subst.tcl: fixed Doc_application/x-tcl-auth based on a bug
        filed by Andreas Kupries

2003-5-01  Brent Welch <welch@panasas.com>
        * Removed the precompiled .so files as those cause more
          trouble than they are worth.
        * src/limit.c: added stubs enabled version from Michael Schlenker
        * lib/debug.tcl: add custom library to path used by /debug/source
        * lib/doc.tcl: added Doc_Redirect Doc_RedirectSelf compat aliases

2002-12-02  Brent Welch <welch@panasas.com>
        * Merged the tclhttpd-3-4-rel branch into the trunk.
          tclhttpd-3-4-rel-3 represents the 3.4.3 release and
          the merge point.  This sets the version numbers to
          3.4.3, which isn't strictly correct, but reflects
          the merge.

2002-12-02  Wojciech Kocjan (via Brent Welch)
        * lib/httpd.tcl: added data(headerlist) that records the header
        information in order so the AOLserver emulation can recreate
        the exact MIME headers of the request.
        * lib/url.tcl: added a URL access hook return code of "return"
        which just means "I've serviced this URL request completely".

2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: better DESTDIR/libdir support (steffen)

2002-08-30  Brent Welch <welch@panasas.com>
        * Merged the tclhttpd-3-4-rel branch into the trunk.